# acpl

./: .gitignore  ACPLConfig.cmake.in  ACPLConfigVersion.cmake.in  ACPLUtils.cmake  AcplUtils.cmake  CMakeLists.txt  FindAcpl.cmake  LICENSE.txt  README.txt  doxygen.conf
src/: Array.dox  Array.h  Bits.cpp  Bits.dox  Bits.h  CMakeLists.txt  Charsets.cpp  Charsets.dox  Charsets.h  Defines.dox  Defines.h  Devel.dox  Devel.h  Endian.cpp  Endian.dox  Endian.h  Io.cpp  Io.dox  Io.h  Macros.dox  Macros.h  Memory.cpp  Memory.dox  Memory.h  Raii.dox  Raii.h  String.cpp  String.dox  String.h  Thread.cpp  Thread.dox  Thread.h  Time.cpp  Time.dox  Time.h  Types.dox  Types.h  Uri.cpp  Uri.dox  Uri.h  (+3 more)
src/_cp/: Basic.inc.cpp  Filesys.inc.cpp  Memory.inc.cpp  Network.inc.cpp  Parallel.inc.cpp
src/_cp/glibc/: Basic.inc.cpp  Filesys.inc.cpp  Memory.inc.cpp  Network.inc.cpp  Parallel.inc.cpp
src/_cp/mscrt/: Basic.inc.cpp  Filesys.inc.cpp  Memory.inc.cpp  Network.inc.cpp  Parallel.inc.cpp
src/_i18n/charsets/: Charset_ISO_8859_10_1998.inc.cpp  Charset_ISO_8859_11_2001.inc.cpp  Charset_ISO_8859_13_1998.inc.cpp  Charset_ISO_8859_14_1998.inc.cpp  Charset_ISO_8859_15_1999.inc.cpp  Charset_ISO_8859_16_2001.inc.cpp  Charset_ISO_8859_1_1998.inc.cpp  Charset_ISO_8859_2_1999.inc.cpp  Charset_ISO_8859_3_1999.inc.cpp  Charset_ISO_8859_4_1998.inc.cpp  Charset_ISO_8859_5_1999.inc.cpp  Charset_ISO_8859_6_1999.inc.cpp  Charset_ISO_8859_7_2003.inc.cpp  Charset_ISO_8859_8_1999.inc.cpp  Charset_ISO_8859_9_1999.inc.cpp  Charset_UCS_2.inc.cpp  Charset_UCS_4.inc.cpp  Charset_UTF_16.inc.cpp  Charset_UTF_32.inc.cpp  Charset_UTF_8.inc.cpp  Charsets.inc.cpp
src/fs/: Dir.cpp  Dir.dox  Dir.h  File.cpp  File.dox  File.h  Path.cpp  Path.dox  Path.h
src/net/: Address.cpp  Address.dox  Address.h  Header.cpp  Header.dox  Header.h  Poll.cpp  Poll.dox  Poll.h  Socket.cpp  Socket.dox  Socket.h
testsrc/: CMakeLists.txt  Main.cpp  Tests.h  TestsAdhoc.cpp  TestsArray.cpp  TestsBits.cpp  TestsCharsets.cpp  TestsDefines.cpp  TestsEndian.cpp  TestsFsCmn.inc.cpp  TestsFsDir.cpp  TestsFsFile.cpp  TestsFsPath.cpp  TestsIo.cpp  TestsMemory.cpp  TestsNetAddr.cpp  TestsNetCmn.inc.cpp  TestsNetHeader.cpp  TestsNetPoll.cpp  TestsNetSock.cpp  TestsRaii.cpp  TestsString.cpp  TestsThreads.cpp  TestsTime.cpp  TestsTypes.cpp  TestsUri.cpp
